--- a/src/app.css
+++ b/src/app.css
@@ -16,3 +16,12 @@
 .footer_ul_li {
 	@apply w-6/12 font-semibold text-lg text-white md:mr-[40px] md:text-xl md:font-medium hover:opacity-40 transition-opacity;
 }
+
+.mapboxgl-canvas {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
